--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     docker:
       - image: circleci/golang:1.11
       
-    working_directory: /go/src/github.com/kyokomi/s3gopilicy
+    working_directory: /go/src/github.com/kyokomi/s3gopolicy
     steps:
       - checkout
 
