--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,16 +10,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
       - run: go version
-      - name: golangci-lint v2
+      - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
-          working-directory: ./v2
-      - name: golangci-lint v4
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-          working-directory: ./v4
       - run: go test -v -coverprofile=profile.cov ./...
       - uses: shogo82148/actions-goveralls@v1
         with:
